2020-05-07         [RELEASE] Release of filefill 3.2.3 (Nicole Cordes)
2020-05-07 8d2a50d [BUGFIX] Correct the order of parameters (Julian Hofmann)
2020-05-07 da5bb4a [BUGFIX] Correct the order of parameters (Julian Hofmann)

2020-05-05         [RELEASE] Release of filefill 3.2.2 (Nicole Cordes)
2020-05-05 9c7769b [TASK] Use proper return value in symfony commands (Björn Fromme)

2020-04-22         [RELEASE] Release of filefill 3.2.1 (Nicole Cordes)
2020-04-22 c9296ac [TASK] Raise compatibility to TYPO3 10.4 (Nicole Cordes)
2020-04-07 d1d483f [BUGFIX] Use RequestFactory for http requests (Nicole Cordes)

2020-04-02         [RELEASE] Release of filefill 3.2.0 (Nicole Cordes)
2020-03-28 f19bf2e [BUGFIX] Streamline url handling in DomainResource (Nicole Cordes)
2020-03-22 6dad456 [BUGFIX] Use site configurations for sys_domain resource (Nicole Cordes)
2020-03-19 2289af0 [BUGFIX] Call getFileInfoByIdentifier on original driver (Nicole Cordes)
2020-03-18 6dfd829 [FEATURE] Add command to reset missing files (Nicole Cordes)
2020-03-17 e049d1d [FEATURE] Add command to delete files (Nicole Cordes)
2020-03-14 51c9f64 [FEATURE] Also delete processed files (Nicole Cordes)
2020-03-14 385b1ff [FEATURE] Delete files fetched by a resource handler (Nicole Cordes)
2020-03-13 7bcb2cd [FEATURE] Add functional tests (Nicole Cordes)
2020-01-07 837e45d [TASK] Override also LocalDriver->getFileInfoByIdentifier() (Rémy DANIEL)

2020-03-10         [RELEASE] Release of filefill 3.1.0 (Nicole Cordes)
2020-03-10 5740bb0 [TASK] Add TYPO3 10.3 to extension constraints and Travis CI (Nicole Cordes)
2020-03-10 d56c3db [TASK] Update supporting files to EXT:my_skeleton 0.3.0 (Nicole Cordes)
2020-03-10 f6193aa [TASK] Use own form element for missing file infomation (Nicole Cordes)
2020-03-10 8f6f254 [TASK] Move file handling to driver (Nicole Cordes)
2020-03-05 b788f67 [FEATURE] Allow streaming of files (Nicole Cordes)

2020-03-05         [RELEASE] Release of filefill 3.0.3 (Nicole Cordes)